--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,6 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
-Tolulope Fakunle <fakunletolulope05@gmail.com>
+Chane Eshetu <chaneeshetu9693@gmail.com>
+Rebcca Asaye <rebccaassefa.945@gmail.com>
+
